--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.5.2",
     "firebase": "^10.12.3",
+    "flip-move": "^1.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-flip-move": "^3.0.5",
     "react-icons": "^5.2.1",
     "react-redux": "^8.1.3",
     "react-scripts": "5.0.1",
